fix(header-nav-bar): show menu on mobiles above general-photo gallery

--- a/components/HeaderNavBar/HeaderNavBar.module.css
+++ b/components/HeaderNavBar/HeaderNavBar.module.css
@@ -50,7 +50,7 @@
   top: 0;
   right: 0;
   left: 0;
-  z-index: 1;
+  z-index: 10;
   padding: 0 1rem;
   background-color: #fff;
   box-shadow: 0 10px 15px 0 rgb(3 5 5 / 35%);
